[project]
name = "rocketseat-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
